# sdl2-learning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
legacy/chapter1/: main.cpp
legacy/chapter3/: main.cpp
scripts/: build.sh  buildRun.sh  production.sh
